# portfolio_website

./: .env.example  .gitmodules  001  README.md  render.yaml
apps/portfolio/: README.md  pyproject.toml
apps/portfolio/content/: basic_content.json  constructor.json  developer.json  education.json  main.json  planner.json  politika_konfidencialnosti.json  polzovatelskoe_soglashenie.json  portfolio_projects.json  robots.txt  site_content.json  technologist.json  temp.txt  values.json  work_places.json
apps/portfolio/i18n/: ui_ru.json
apps/portfolio/scripts/: run_dev.py
apps/portfolio/src/portfolio/: __init__.py  _version.py  config.py  dependencies.py  feedback_db.py  i18n.py  main.py  presentation.py
apps/portfolio/src/portfolio/layout/: developer_portfolio_bubbles.json
apps/portfolio/src/portfolio/routers/: __init__.py  feedback.py  pages.py
apps/portfolio/src/portfolio/routers/apps/: __init__.py  projects.py
apps/portfolio/src/portfolio/services/: __init__.py  content.py  html_sanitize.py  page_context.py  portfolio.py  profession.py
apps/portfolio/src/portfolio/services/apps/: registry.py
apps/portfolio/src/portfolio/static/css/: base.css  portfolio-layout.css  styles.css
apps/portfolio/src/portfolio/templates/: base.html  constructor.html  developer.html  education.html  index.html  main.html  planner.html  politika_konfidencialnosti.html  polzovatelskoe_soglashenie.html  profession.html  technologist.html  work_places.html
apps/portfolio/tests/: __init__.py  test_html_sanitize.py  test_pages.py
docs/: feedback_form_roadmap.md  roadmap.md  (+2 more)
(+55 files in other folders)
