[tool.poetry]
name = "portfolio"
version = "0.0.015"
description = "Персональный сайт-визитка с демонстрацией PET-проектов"
authors = ["Andrey Korenyk <korenyuk.a.n@mail.ru>"]
readme = "README.md"
packages = [
    { include = "portfolio", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = "^0.115.2"
uvicorn = "^0.34.0"
jinja2 = "^3.1.6"
pydantic-settings = "^2.9.1"
python-multipart = "^0.0.9"
tomli = {version = "^2.0.1", markers = "python_version < \"3.11\"" }

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
mypy = "^1.13.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"

[tool.black]
line-length = 79
target-version = ["py39"]
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
strict = true
plugins = ["pydantic.mypy"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

